compiler/stage0/tests/snapshots/program__tests_fixtures_programs_imported_syn_0034_div_two_ints.snap
---
source: tests/fixtures.rs
expression: transcript
---
fixture: tests/fixtures/programs/imported/syn/0034_div_two_ints.ml

compile:
status: success
stdout:
<empty>
stderr:
<empty>

run:
status: success
stdout:
5
stderr:
<empty>
