compiler/stage0/tests/snapshots/program__tests_fixtures_programs_imported_syn_0035_mod_two_ints.snap
---
source: tests/fixtures.rs
expression: transcript
---
fixture: tests/fixtures/programs/imported/syn/0035_mod_two_ints.ml

compile:
status: success
stdout:
<empty>
stderr:
<empty>

run:
status: success
stdout:
1
stderr:
<empty>
