compiler/stage0/tests/snapshots/program__tests_fixtures_programs_imported_syn_0038_paren_precedence.snap
---
source: tests/fixtures.rs
expression: transcript
---
fixture: tests/fixtures/programs/imported/syn/0038_paren_precedence.ml

compile:
status: success
stdout:
<empty>
stderr:
<empty>

run:
status: success
stdout:
9
stderr:
<empty>
