compiler/stage0/tests/snapshots/program__tests_fixtures_programs_imported_syn_0047_string_eq.snap
---
source: tests/fixtures.rs
expression: transcript
---
fixture: tests/fixtures/programs/imported/syn/0047_string_eq.ml

compile:
status: success
stdout:
<empty>
stderr:
<empty>

run:
status: success
stdout:
false
stderr:
<empty>
