compiler/stage0/tests/snapshots/program__tests_fixtures_programs_imported_syn_0071_if_then_else_simple.snap
---
source: tests/fixtures.rs
expression: transcript
---
fixture: tests/fixtures/programs/imported/syn/0071_if_then_else_simple.ml

compile:
status: success
stdout:
<empty>
stderr:
<empty>

run:
status: success
stdout:
1
stderr:
<empty>
