compiler/stage0/tests/snapshots/program__tests_fixtures_programs_imported_syn_0075_if_paren_condition.snap
---
source: tests/fixtures.rs
expression: transcript
---
fixture: tests/fixtures/programs/imported/syn/0075_if_paren_condition.ml

compile:
status: success
stdout:
<empty>
stderr:
<empty>

run:
status: success
stdout:
0
stderr:
<empty>
